--- a/devel/py-meson/Makefile
+++ b/devel/py-meson/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2019/03/11 12:08:19 jperkin Exp $
+# $NetBSD: Makefile,v 1.19 2019/03/13 12:51:13 prlw1 Exp $
 
-DISTNAME=	meson-0.49.2
+DISTNAME=	meson-0.50.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/meson/}
 
@@ -13,7 +12,7 @@ LICENSE=	apache-2.0
 
 DEPENDS+=	ninja-build-[0-9]*:../../devel/ninja-build
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+PYTHON_VERSIONS_INCOMPATIBLE=	27 34
 
 # c++ for tests
 USE_LANGUAGES=	c c++
