--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1026 2019/03/01 22:09:36 gutteridge Exp $
+# $NetBSD: Makefile,v 1.1027 2019/03/13 18:00:02 adam Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -836,6 +836,7 @@ SUBDIR+=	py-pysrt
 SUBDIR+=	py-pytoml
 SUBDIR+=	py-ramlfications
 SUBDIR+=	py-rdflib
+SUBDIR+=	py-readme_renderer
 SUBDIR+=	py-rebulk
 SUBDIR+=	py-regex
 SUBDIR+=	py-relatorio
