--- a/net/py-foolscap/Makefile
+++ b/net/py-foolscap/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2019/03/13 18:02:31 adam Exp $
+# $NetBSD: Makefile,v 1.31 2019/03/13 18:37:12 wiz Exp $
 
 DISTNAME=	foolscap-0.13.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_PYPI:=f/foolscap/}
 
 MAINTAINER=	kamel.derouiche@gmail.com
 HOMEPAGE=	http://foolscap.lothar.com/trac
-COMMENT=	Foolscap contains an RPC protocol for Twisted
+COMMENT=	RPC protocol for Twisted
 LICENSE=	mit
 
 DEPENDS+=	${PYPKGPREFIX}-OpenSSL>=0.6:../../security/py-OpenSSL
