--- a/net/py-ncclient/Makefile
+++ b/net/py-ncclient/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2019/03/13 18:02:31 adam Exp $
+# $NetBSD: Makefile,v 1.10 2019/03/13 18:56:18 adam Exp $
 
 DISTNAME=	ncclient-0.6.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -12,9 +12,9 @@ LICENSE=	apache-2.0
 
 DEPENDS+=	${PYPKGPREFIX}-lxml>=3.3.0:../../textproc/py-lxml
 DEPENDS+=	${PYPKGPREFIX}-paramiko>=1.15.0:../../security/py-paramiko
+DEPENDS+=	${PYPKGPREFIX}-selectors2>=2.0.1:../../devel/py-selectors2
 DEPENDS+=	${PYPKGPREFIX}-setuptools>0.6:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
-# TODO selectors2>=2.0.1
 
 USE_LANGUAGES=	# none
 
