--- a/graphics/mate-themes/Makefile
+++ b/graphics/mate-themes/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.13 2019/01/16 18:21:09 youri Exp $
+# $NetBSD: Makefile,v 1.14 2019/03/13 23:08:23 gutteridge Exp $
 
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	mate-themes-3.22.18
+VERSION=	3.22.19
+DISTNAME=	mate-themes-${VERSION}
 CATEGORIES=	graphics
-MASTER_SITES=	http://pub.mate-desktop.org/releases/themes/3.22/
+MASTER_SITES=	http://pub.mate-desktop.org/releases/themes/${VERSION:R}/
 
 COMMENT=	Icons and themes for MATE desktop
 
