--- a/wm/notion/Makefile
+++ b/wm/notion/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2019/03/13 21:16:15 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2019/03/14 12:12:46 wiz Exp $
 
 DISTNAME=	notion-3-2017050501
 PKGNAME=	${DISTNAME:S/3-/3./}
@@ -7,7 +7,7 @@ CATEGORIES=	wm
 MASTER_SITES=	${MASTER_SITE_GITHUB:=raboof/}
 GITHUB_TAG=	${DISTNAME:S/notion-//}
 
-MAINTAINER=	wiz@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://notion.sourceforge.net/
 COMMENT=	Tiling window manager based on ion3
 LICENSE=	ion-license AND gnu-lgpl-v2.1
