--- a/games/flightgear/Makefile
+++ b/games/flightgear/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.82 2019/02/16 13:26:49 wiz Exp $
+# $NetBSD: Makefile,v 1.83 2019/03/14 18:13:18 nia Exp $
 
-DISTNAME=	flightgear-2018.2.2
-PKGREVISION=	3
+DISTNAME=	flightgear-2018.3.2
 CATEGORIES=	games
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=flightgear/release-2018.2/}
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=flightgear/release-2018.3/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,18 +15,29 @@ USE_PKGLOCALEDIR=	yes
 USE_CMAKE=		yes
 LDFLAGS.NetBSD+=	-lexecinfo
 
+CONFIGURE_DIRS=		fgbuild
+BUILD_DIRS=		fgbuild
+CMAKE_ARG_PATH=		..
+
 BUILDLINK_TRANSFORM+=	l:glut:freeglut
+
+# The cmake script warns against building in the source directory.
+pre-configure:
+	cd ${WRKSRC} && ${MKDIR} fgbuild
 
 .include "../../audio/openal-soft/buildlink3.mk"
 .include "../../devel/boost-headers/buildlink3.mk"
 .include "../../games/plib/buildlink3.mk"
-BUILDLINK_API_DEPENDS.simgear+=	simgear>=2.0.0
+BUILDLINK_API_DEPENDS.simgear+=	simgear>=2018.3.0
 .include "../../games/simgear/buildlink3.mk"
 .include "../../graphics/freeglut/buildlink3.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
 .include "../../graphics/glew/buildlink3.mk"
 .include "../../graphics/osg/buildlink3.mk"
 .include "../../www/curl/buildlink3.mk"
+.include "../../x11/qt5-qtbase/buildlink3.mk"
+.include "../../x11/qt5-qtquickcontrols2/buildlink3.mk"
+.include "../../x11/qt5-qtsvg/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/libXi/buildlink3.mk"
 .include "../../x11/libXmu/buildlink3.mk"
