--- a/devel/go-siphash/Makefile
+++ b/devel/go-siphash/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.9 2019/03/09 10:05:07 bsiegert Exp $
+# $NetBSD: Makefile,v 1.10 2019/03/14 23:22:26 alnsn Exp $
 
-GITHUB_TAG=	v1.2.0
+GITHUB_TAG=	v1.2.1
 DISTNAME=	${GITHUB_TAG}
 DIST_SUBDIR=	go-siphash
 PKGNAME=	${DIST_SUBDIR}-${GITHUB_TAG:S/v//}
-PKGREVISION=	4
 CATEGORIES=	devel security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=dchest/}
 GITHUB_PROJECT=	siphash
