--- a/devel/go-protobuf/Makefile
+++ b/devel/go-protobuf/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2019/03/09 10:05:06 bsiegert Exp $
+# $NetBSD: Makefile,v 1.17 2019/03/15 09:05:37 he Exp $
 
-DISTNAME=		go-protobuf-1.3.0
-PKGREVISION=		1
+DISTNAME=		go-protobuf-1.3.1
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GITHUB:=golang/}
 GITHUB_PROJECT=		protobuf
@@ -18,8 +17,7 @@ GO_SRCPATH=		github.com/golang/protobuf
 GO_BUILD_PATTERN+=	${GO_SRCPATH}/${godir}/...
 .endfor
 
-REPLACE_SH+=		conformance/conformance.sh conformance/test.sh \
-			regenerate.sh
+REPLACE_SH+=		regenerate.sh
 
 CHECK_RELRO_SKIP+=	bin/protoc-gen-go
 
