--- a/devel/cbindgen/Makefile
+++ b/devel/cbindgen/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2019/02/19 22:24:12 he Exp $
+# $NetBSD: Makefile,v 1.4 2019/03/15 13:05:55 ryoon Exp $
 
-DISTNAME=	cbindgen-0.8.0
+DISTNAME=	cbindgen-0.8.2
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=eqrion/}
 GITHUB_PROJECT=	cbindgen
