--- a/sysutils/u-boot-pine64/Makefile
+++ b/sysutils/u-boot-pine64/Makefile
@@ -1,19 +1,19 @@
-# $NetBSD: Makefile,v 1.6 2018/12/31 15:06:46 jmcneill Exp $
+# $NetBSD: Makefile,v 1.7 2019/03/15 14:00:36 martin Exp $
 
 UBOOT_TARGET=		pine64
 UBOOT_CONFIG=		pine64_plus_defconfig
 UBOOT_BIN=		u-boot-sunxi-with-spl.bin
 
-PKGREVISION=		1
+PKGREVISION=		2
 
 # Switch to EL1 before booting kernel (required for 32-bit support)
 PKG_DEFAULT_OPTIONS+=	el1
 
 post-extract:
-	${CP} ${PREFIX}/share/arm-trusted-firmware/sun50iw1p1/bl31.bin ${WRKSRC}
+	${CP} ${PREFIX}/share/arm-trusted-firmware/sun50i_a64/bl31.bin ${WRKSRC}
 
 post-build:
 	${CAT} ${WRKSRC}/spl/sunxi-spl.bin ${WRKSRC}/u-boot.itb > ${WRKSRC}/u-boot-sunxi-with-spl.bin
 
-.include "../../sysutils/arm-trusted-firmware-sun50iw1p1/buildlink3.mk"
+.include "../../sysutils/arm-trusted-firmware-sun50i_a64/buildlink3.mk"
 .include "../../sysutils/u-boot/u-boot-arm64.mk"
