--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1262 2019/08/20 11:26:32 wiz Exp $
+# $NetBSD: Makefile,v 1.1263 2019/08/20 13:17:22 wiz Exp $
 #
 
 COMMENT=	Networking tools
@@ -231,6 +231,7 @@ SUBDIR+=	gupnp-av
 SUBDIR+=	gupnp-dlna
 SUBDIR+=	gupnp-igd
 SUBDIR+=	gupnp-tools
+SUBDIR+=	gupnp12
 SUBDIR+=	haproxy
 SUBDIR+=	hesiod
 SUBDIR+=	hf6to4
