--- a/databases/prometheus/Makefile
+++ b/databases/prometheus/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2019/08/14 15:45:33 bsiegert Exp $
+# $NetBSD: Makefile,v 1.7 2019/08/21 08:46:39 adam Exp $
 
-DISTNAME=	prometheus-2.10.0
+DISTNAME=	prometheus-2.12.0
 MASTER_SITES=	${MASTER_SITE_GITHUB:=prometheus/}
-PKGREVISION=	1
 CATEGORIES=	databases
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
