--- a/databases/postgres_exporter/Makefile
+++ b/databases/postgres_exporter/Makefile
@@ -1,14 +1,12 @@
-# $NetBSD: Makefile,v 1.2 2019/08/14 15:45:33 bsiegert Exp $
+# $NetBSD: Makefile,v 1.3 2019/08/21 08:50:51 adam Exp $
 
-DISTNAME=	postgres_exporter-0.4.7
+DISTNAME=	postgres_exporter-0.5.1
 MASTER_SITES=	${MASTER_SITE_GITHUB:=wrouesnel/}
-PKGREVISION=	1
 CATEGORIES=	databases
-GITHUB_PROJECT=	postgres_exporter
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
 MAINTAINER=	pkgsrc-users@pkgsrc.org
-HOMEPAGE=	https://github.com/wrouesnel/postgres_exporter/
+HOMEPAGE=	https://github.com/wrouesnel/postgres_exporter
 COMMENT=	PostgresSQL metric exporter for Prometheus
 LICENSE=	apache-2.0
 
