--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1399 2019/08/09 20:54:28 brook Exp $
+# $NetBSD: Makefile,v 1.1400 2019/08/21 12:41:24 adam Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -738,6 +738,7 @@ SUBDIR+=	py-hyperframe
 SUBDIR+=	py-hyperlink
 SUBDIR+=	py-idna
 SUBDIR+=	py-idna_ssl
+SUBDIR+=	py-ipywidgets
 SUBDIR+=	py-jonpy
 SUBDIR+=	py-landslide
 SUBDIR+=	py-livereload
