--- a/graphics/glu/Makefile
+++ b/graphics/glu/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.65 2019/06/14 10:22:46 jperkin Exp $
+# $NetBSD: Makefile,v 1.66 2019/08/21 16:25:02 nia Exp $
 
 DISTNAME=	glu-9.0.0
 PKGREVISION=	2
@@ -8,7 +8,7 @@ EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://cgit.freedesktop.org/mesa/glu/
-COMMENT=	GLU polygon tessellation facility for Mesa
+COMMENT=	OpenGL Utility Library
 LICENSE=	sgi-free-software-b-v2.0
 
 GNU_CONFIGURE=	yes
