--- a/graphics/glut/Makefile
+++ b/graphics/glut/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.60 2018/10/17 18:03:48 jperkin Exp $
+# $NetBSD: Makefile,v 1.61 2019/08/21 16:25:02 nia Exp $
 
 DISTNAME=	MesaGLUT-7.9.2
 # we have the autoconf patches from git, so call it 8.0.1.
@@ -10,7 +10,7 @@ EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://cgit.freedesktop.org/mesa/glut/
-COMMENT=	GLUT Graphics library similar to SGI's OpenGL
+COMMENT=	OpenGL Utility Toolkit
 #LICENSE=	# TODO: (see mk/license.mk)
 
 WRKSRC=		${WRKDIR}/Mesa-7.9.2
