--- a/net/pulledpork/Makefile
+++ b/net/pulledpork/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2019/08/11 13:22:28 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2019/08/21 21:24:08 nils Exp $
 
-DISTNAME=	pulledpork-0.7.2
-PKGREVISION=	2
+DISTNAME=	pulledpork-0.7.3
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=shirkdog/}
 
