--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.329 2019/08/17 10:49:46 ng0 Exp $
+# $NetBSD: Makefile,v 1.330 2019/08/22 09:32:50 nia Exp $
 #
 
 COMMENT=	Fonts
@@ -117,8 +117,8 @@ SUBDIR+=	go-ttf
 SUBDIR+=	gsftopkk
 SUBDIR+=	gucharmap
 SUBDIR+=	harfbuzz
-SUBDIR+=	ibm-plex-ttf
 SUBDIR+=	ibm-plex-otf
+SUBDIR+=	ibm-plex-ttf
 SUBDIR+=	inconsolata-g
 SUBDIR+=	inconsolata-ttf
 SUBDIR+=	intlfonts
