--- a/graphics/glu/Makefile
+++ b/graphics/glu/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.66 2019/08/21 16:25:02 nia Exp $
+# $NetBSD: Makefile,v 1.67 2019/08/22 09:57:08 nia Exp $
 
 DISTNAME=	glu-9.0.0
 PKGREVISION=	2
 CATEGORIES=	graphics
-MASTER_SITES=	ftp://ftp.freedesktop.org/pub/mesa/glu/
+MASTER_SITES=	https://mesa.freedesktop.org/archive/glu/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
