--- a/graphics/glut/Makefile
+++ b/graphics/glut/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.61 2019/08/21 16:25:02 nia Exp $
+# $NetBSD: Makefile,v 1.62 2019/08/22 09:57:08 nia Exp $
 
 DISTNAME=	MesaGLUT-7.9.2
 # we have the autoconf patches from git, so call it 8.0.1.
 PKGNAME=	glut-8.0.1
 PKGREVISION=	2
 CATEGORIES=	graphics
-MASTER_SITES=	ftp://ftp.freedesktop.org/pub/mesa/glut/
+MASTER_SITES=	https://mesa.freedesktop.org/archive/glut/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
